cryptocurrencies list created

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
                                     <label class="select-item">
                                         <input type="radio" name="currency" class="select-item__radio">
                                         <span class="select-item__title">Bitcoin</span>
+                                        <small class="select-item__symbol">btc</small>
                                     </label>
                             </template>
                         </div>
